# bidi_char_detector

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  bidi_config.toml
.github/workflows/: docker-publish.yml  rust.yml
src/: lib.rs  main.rs
