[package]
name = "bidi_detector"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
toml = "0.5.9"
glob = "0.3.0"

[profile.release]
lto = true
opt-level = 3